tests/src/frontend/typechecking/invalid/loop_condition.sk
fun no1(): void {
  while (0) void
}

fun no2(): void {
  do void while ("")
}
